fixed folder names and descriptions and made covers in the dialog clickable

--- a/src/Components/FolderGrid/FolderGrid.css
+++ b/src/Components/FolderGrid/FolderGrid.css
@@ -18,8 +18,7 @@
 .folder-grid {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 10px !important;
 }
 
 .folder {
@@ -44,9 +43,11 @@
 .redirect-button {
   color: unset !important;
   text-transform: none !important;
+
   &.MuiButtonBase-root:hover {
     background-color: transparent;
   }
+
   .MuiTouchRipple-child {
     background-color: #ffffff !important;
   }
